--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: AeKo0udWVWUXwtEmz9SjVe0gRVU1KWxwUf/OParDdR80AM2hVphGP9Zc3bQ4xa4qmFFwLnTl7Impoc5RmE5cmMu7CHO0c9OYwRQ8RaLXd4YzXH+KojL7spGrRiZCz58mCuBRvW7QB3ICmjLUJLfHSAMdHOSiuUC+vE2riA8NZWo=
+    secure: LsUY3FTxVzVJpQj3xvQwA7FVISLUEQprrXLrFC/879NDiiMRVSndP1O4fmTLnKJ1lZ7DThW//2mPcK+MLMsGUf5mjpUZxG85R+8dZZ9VXIPYeBcu+miB9ZT0IqGR3FK5nnyvnkidvacuuT40Axn73hXWsCnbzr+m5UzLpgojCkU=
